Adicionando pagina de titulos

--- a/pj/site/client/index.html
+++ b/pj/site/client/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <ul>
-            <img style="width: 50px;" src="../img/logo-palmeiras.png">
+            <img style="width: 50px;" src="img/logo-palmeiras.png">
             <li><a class="aPalmeiras" href="../home/index.html">Palmeiras</a></li>
         </ul>
         <ul>
@@ -34,10 +34,10 @@
     </nav>    
 
     <div id="divSlideShow">
-        <img id="ft1" src="img/banner1.png" alt="">
-        <img style="display: none;" id="ft2" src="img/banner2.png" alt="">
-        <img style="display: none;" id="ft3" src="img/banner4.png" alt="">
-        <img style="display: none;" id="ft4" src="img/banner3.png" alt="">
+        <img id="ft1" src="img/banner/banner1.png" alt="">
+        <img style="display: none;" id="ft2" src="img/banner/banner2.png" alt="">
+        <img style="display: none;" id="ft3" src="img/banner/banner4.png" alt="">
+        <img style="display: none;" id="ft4" src="img/banner/banner3.png" alt="">
     </div>
     <div class="divBtnSlideShow">
         <button id="button1" onclick="btn1()"></button>
@@ -63,14 +63,14 @@
         <div class="divTitulos">
             <a href="">
                 <p>Títulos</p>
-                <img style="width: 70px;" src="../img/trofeu.png" alt="">
+                <img style="width: 70px;" src="img/trofeu.png" alt="">
             </a>
         </div>
         <div class="divJunta">
             <div class="divBranco"></div>
             <div class="divEscudos">
                 <a href="">
-                    <img style="width: 70px;" src="../img/camisa.png" alt="">
+                    <img style="width: 70px;" src="img/camisa.png" alt="">
                     <p>Atuais Peças</p> 
                 </a>
             </div>
@@ -78,7 +78,7 @@
         <div class="divTitulos">
             <a href="pages/escudos/escudos.html">
                 <p>Escudos</p>
-                <img style="width: 70px;" src="../img/escudo1914.png" alt="">
+                <img style="width: 70px;" src="img/escudo1914.png" alt="">
             </a>
         </div>
     </div>
