--- a/pj/site/client/pages/quiz/quiz2.html
+++ b/pj/site/client/pages/quiz/quiz2.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="quiz2.css">
-    <link rel="shortcut icon" href="../img/palmeirasIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/palmeirasIcon.ico" type="image/x-icon">
     <title>Quiz - Você conhece o elenco Feminino?</title>
 </head>
 <body>
     <nav>
         <ul>
-            <img style="width: 60px;" src="../img/logo-palmeiras.png">
-            <li><a class="aPalmeiras" href="../index/index.html">Palmeiras</a></li>
+            <img style="width: 60px;" src="../../img/logo-palmeiras.png">
+            <li><a class="aPalmeiras" href="../../index.html">Palmeiras</a></li>
         </ul>
         <ul>
             <li><a href="../historia/historia.html">Histórias</a></li>
@@ -45,7 +45,7 @@
 
             <div id="pergunta1" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-yamila.png">
+                <img src="../../img/quiz/jogadora-yamila.png">
                 <div>
                     <button onclick="quest1(0)">Letícia Ferreira</button>
                     <button onclick="quest1(0)">Amanda</button>
@@ -54,7 +54,7 @@
             </div>
             <div id="pergunta2" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-zaneratto.png">
+                <img src="../../img/quiz/jogadora-zaneratto.png">
                 <div>
                     <button onclick="quest2(1)">Bia Zaneratto</button>
                     <button onclick="quest2(0)">Camilinha</button>
@@ -63,7 +63,7 @@
             </div>
             <div id="pergunta3" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-chu.png">
+                <img src="../../img/quiz/jogadora-chu.png">
                 <div>
                     <button onclick="quest3(0)">Juliana</button>
                     <button onclick="quest3(0)">Laís</button>
@@ -72,7 +72,7 @@
             </div>
             <div id="pergunta4" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-duda.png">
+                <img src="../../img/quiz/jogadora-duda.png">
                 <div>
                     <button onclick="quest4(0)">Bia Zaneratto</button>
                     <button onclick="quest4(1)">Duda Santos</button>
@@ -81,7 +81,7 @@
             </div>
             <div id="pergunta5" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-dudinha.pnh.png">
+                <img src="../../img/quiz/jogadora-dudinha.pnh.png">
                 <div>
                     <button onclick="quest5(0)">Duda Santos</button>
                     <button onclick="quest5(1)">Dudinha</button>
@@ -90,7 +90,7 @@
             </div>
             <div id="pergunta6" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-sorriso.png">
+                <img src="../../img/quiz/jogadora-sorriso.png">
                 <div>
                     <button onclick="quest6(0)">Bruna</button>
                     <button onclick="quest6(0)">Juliete</button>
@@ -99,7 +99,7 @@
             </div>
             <div id="pergunta7" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-amanda.png">
+                <img src="../../img/quiz/jogadora-amanda.png">
                 <div>
                     <button onclick="quest7(0)">Kate Tapia</button>
                     <button onclick="quest7(0)">Alicia</button>
@@ -108,7 +108,7 @@
             </div>
             <div id="pergunta8" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-calderan.png">
+                <img src="../../img/quiz/jogadora-calderan.png">
                 <div>
                     <button onclick="quest8(1)">Calderan</button>
                     <button onclick="quest8(0)">Chu</button>
@@ -117,7 +117,7 @@
             </div>
             <div id="pergunta9" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-lorena.png">
+                <img src="../../img/quiz/jogadora-lorena.png">
                 <div>
                     <button onclick="quest9(0)">Amanda</button>
                     <button onclick="quest9(1)">Lorena</button>
@@ -126,7 +126,7 @@
             </div>
             <div id="pergunta10" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogadora-barbara.png">
+                <img src="../../img/quiz/jogadora-barbara.png">
                 <div>
                     <button onclick="quest10(0)">Alicia</button>
                     <button onclick="quest10(1)">Bárbara</button>
