--- a/pj/site/client/pages/quiz/quiz3.html
+++ b/pj/site/client/pages/quiz/quiz3.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="quiz2.css">
-    <link rel="shortcut icon" href="../img/palmeirasIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/palmeirasIcon.ico" type="image/x-icon">
     <title>Quiz - Você conhece o Palmeiras?</title>
 </head>
 <body>
     <nav>
         <ul>
-            <img style="width: 60px;" src="../img/logo-palmeiras.png">
-            <li><a class="aPalmeiras" href="../index/index.html">Palmeiras</a></li>
+            <img style="width: 60px;" src="../../img/logo-palmeiras.png">
+            <li><a class="aPalmeiras" href="../../index.html">Palmeiras</a></li>
         </ul>
         <ul>
             <li><a href="../historia/historia.html">Histórias</a></li>
@@ -45,7 +45,7 @@
 
             <div id="pergunta1" class="divPergunta">
                 <h1>1-) Em qual ano ele foi fundado?</h1>
-                <img src="../img/logo-palmeiras.png">
+                <img src="../../img/logo-palmeiras.png">
                 <div>
                     <button onclick="quest1(1)">1914</button>
                     <button onclick="quest1(0)">1915</button>
@@ -54,7 +54,7 @@
             </div>
             <div id="pergunta2" class="divPergunta">
                 <h1>2-) Quantas libertadores ele tem?</h1>
-                <img src="../img/copa-libertadores-logo.png">
+                <img src="../../img/quiz/copa-libertadores-logo.png">
                 <div>
                     <button onclick="quest2(1)">3</button>
                     <button onclick="quest2(0)">2</button>
@@ -63,7 +63,7 @@
             </div>
             <div id="pergunta3" class="divPergunta">
                 <h1>3-) Qual foi o 1° nome do Palmeiras?</h1>
-                <img src="../img/escudo1914.png">
+                <img src="../../img/escudo/escudo1914.png">
                 <div>
                     <button onclick="quest3(0)">Palmeiras</button>
                     <button onclick="quest3(0)">Sociedade Italia</button>
@@ -72,7 +72,7 @@
             </div>
             <div id="pergunta4" class="divPergunta">
                 <h1>4-) Em que ano ganhou a 1° Libertadores?</h1>
-                <img src="../img/time-palmeiras-1999.png">
+                <img src="../../img/quiz/time-palmeiras-1999.png">
                 <div>
                     <button onclick="quest4(0)">2022</button>
                     <button onclick="quest4(1)">1999</button>
@@ -81,7 +81,7 @@
             </div>
             <div id="pergunta5" class="divPergunta">
                 <h1>5-) O clube é de qual estado?</h1>
-                <img src="../img/brasil.png">
+                <img src="../../img/quiz/brasil.png">
                 <div>
                     <button onclick="quest5(1)">São Paulo</button>
                     <button onclick="quest5(0)">Minas Gerais</button>
@@ -90,7 +90,7 @@
             </div>
             <div id="pergunta6" class="divPergunta">
                 <h1>6-) Qual desses é um mascote do clube?</h1>
-                <img src="../img/mascote-quiz.png">
+                <img src="../../img/quiz/mascote-quiz.png">
                 <div>
                     <button onclick="quest6(0)">Leão</button>
                     <button onclick="quest6(0)">Anjo</button>
@@ -99,7 +99,7 @@
             </div>
             <div id="pergunta7" class="divPergunta">
                 <h1>7-) Qual desses é técnico do clube?</h1>
-                <img src="../img/tecnico-quiz.png">
+                <img src="../../img/quiz/tecnico-quiz.png">
                 <div>
                     <button onclick="quest7(0)">Luxemburgo</button>
                     <button onclick="quest7(0)">Diniz</button>
@@ -108,7 +108,7 @@
             </div>
             <div id="pergunta8" class="divPergunta">
                 <h1>8-) Quantas vezes o Palmeiras venceu a Copa do Brasil?</h1>
-                <img src="../img/copa-do-brasil-logo.png">
+                <img src="../../img/quiz/copa-do-brasil-logo.png">
                 <div>
                     <button onclick="quest8(1)">4</button>
                     <button onclick="quest8(0)">5</button>
@@ -117,7 +117,7 @@
             </div>
             <div id="pergunta9" class="divPergunta">
                 <h1>9-) Em qual posição o jogador "Dudu" joga?</h1>
-                <img src="../img/jogador-dudu.png">
+                <img style="" src="../../img/times/jogador-dudu.png">
                 <div>
                     <button onclick="quest9(0)">Meio Campo</button>
                     <button onclick="quest9(1)">Ataque</button>
@@ -126,7 +126,7 @@
             </div>
             <div id="pergunta10" class="divPergunta">
                 <h1>10-) Com qual clube o Palmeiras tem mais rivalidade?</h1>
-                <img src="../img/rival.png">
+                <img src="../../img/quiz/rival.png">
                 <div>
                     <button onclick="quest10(0)">Flamengo</button>
                     <button onclick="quest10(1)">Corinthians</button>
