--- a/pj/site/client/pages/times/timeFemi.html
+++ b/pj/site/client/pages/times/timeFemi.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="timeMasc.css">
     <link rel="shortcut icon" href="../../img/palmeirasIcon.ico" type="image/x-icon">
-    <title>Time Titular Masculino</title>
+    <title>Time Titular Feminino</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
 
     //Essa função arruma os jogadores por nome
     function ordemJogadores(tipo) {
-        var sexoVar = 'M';
+        var sexoVar = 'F';
 
         fetch("/usuarios/ordemJogadores", {
             method: "POST",
