--- a/pj/site/client/pages/cadastro/cadastro.html
+++ b/pj/site/client/pages/cadastro/cadastro.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="cadastro.css">
+    <link rel="shortcut icon" href="../../img/palmeirasIcon.ico" type="image/x-icon">
     <title>Cadastro</title>
 </head>
 <body>
