--- a/pj/site/client/pages/quiz/quiz1.html
+++ b/pj/site/client/pages/quiz/quiz1.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="quiz1.css">
-    <link rel="shortcut icon" href="../img/palmeirasIcon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/palmeirasIcon.ico" type="image/x-icon">
     <title>Quiz - Você conhece o elenco Masculino?</title>
 </head>
 <body>
     <nav>
         <ul>
-            <img style="width: 60px;" src="../img/logo-palmeiras.png">
-            <li><a class="aPalmeiras" href="../index/index.html">Palmeiras</a></li>
+            <img style="width: 60px;" src="../../img/logo-palmeiras.png">
+            <li><a class="aPalmeiras" href="../../index.html">Palmeiras</a></li>
         </ul>
         <ul>
             <li><a href="../historia/historia.html">Histórias</a></li>
@@ -45,7 +45,7 @@
 
             <div id="pergunta1" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-dudu.png">
+                <img src="../../img/quiz/jogador-dudu.png">
                 <div>
                     <button onclick="quest1(1)">Dudu</button>
                     <button onclick="quest1(0)">Rony</button>
@@ -54,7 +54,7 @@
             </div>
             <div id="pergunta2" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-gabrielMenino.png">
+                <img src="../../img/quiz/jogador-gabrielMenino.png">
                 <div>
                     <button onclick="quest2(0)">Patrick de Paula</button>
                     <button onclick="quest2(1)">Gabiel Menino</button>
@@ -63,7 +63,7 @@
             </div>
             <div id="pergunta3" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-weverton.png">
+                <img src="../../img/quiz/jogador-weverton.png">
                 <div>
                     <button onclick="quest3(0)">Marcelo Lomba</button>
                     <button onclick="quest3(1)">Weverton</button>
@@ -72,7 +72,7 @@
             </div>
             <div id="pergunta4" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-veiga.png">
+                <img src="../../img/quiz/jogador-veiga.png">
                 <div>
                     <button onclick="quest4(0)">Zé Rafael</button>
                     <button onclick="quest4(0)">Gustavo Scarpa</button>
@@ -81,7 +81,7 @@
             </div>
             <div id="pergunta5" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-gustavoGomez.png">
+                <img src="../../img/quiz/jogador-gustavoGomez.png">
                 <div>
                     <button onclick="quest5(0)">Marcos Rocha</button>
                     <button onclick="quest5(0)">Luan</button>
@@ -90,7 +90,7 @@
             </div>
             <div id="pergunta6" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-marcosRocha.png">
+                <img src="../../img/quiz/jogador-marcosRocha.png">
                 <div>
                     <button onclick="quest6(0)">Mayke</button>
                     <button onclick="quest6(1)">Marcos Rocha</button>
@@ -99,7 +99,7 @@
             </div>
             <div id="pergunta7" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-endrick.png">
+                <img src="../../img/quiz/jogador-endrick.png">
                 <div>
                     <button onclick="quest7(1)">Endrick</button>
                     <button onclick="quest7(0)">Giovanni</button>
@@ -108,7 +108,7 @@
             </div>
             <div id="pergunta8" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-arthur.png">
+                <img src="../../img/quiz/jogador-arthur.png">
                 <div>
                     <button onclick="quest8(0)">Danilo</button>
                     <button onclick="quest8(0)">Piquerez</button>
@@ -117,7 +117,7 @@
             </div>
             <div id="pergunta9" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-rony.png">
+                <img src="../../img/quiz/jogador-rony.png">
                 <div>
                     <button onclick="quest9(0)">Tabata</button>
                     <button onclick="quest9(0)">Dudu</button>
@@ -126,7 +126,7 @@
             </div>
             <div id="pergunta10" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../img/jogador-zeRafael.png">
+                <img src="../../img/quiz/jogador-zeRafael.png">
                 <div>
                     <button onclick="quest10(1)">Zé Rafael</button>
                     <button onclick="quest10(0)">Gabriel Menino</button>
