Imagens na linha do tempo de escudos

--- a/pj/site/client/index.html
+++ b/pj/site/client/index.html
@@ -78,7 +78,7 @@
         <div class="divTitulos">
             <a href="pages/escudos/escudos.html">
                 <p>Escudos</p>
-                <img style="width: 70px;" src="img/escudo1914.png" alt="">
+                <img style="width: 70px;" src="img/escudo/escudo1914.png" alt="">
             </a>
         </div>
     </div>
