--- a/pj/site/client/pages/escudos/escudos.html
+++ b/pj/site/client/pages/escudos/escudos.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Elaborado nos primeiros anos de vida do clube, era o símbolo institucional utilizado em impressos, carteiras sociais e na bandeira oficial. </p>
-                    <img src="../../img/escudo1914.png" alt="Escudo 1914">
+                    <img src="../../img/escudo/escudo1914.png" alt="Escudo 1914">
                 </div>
             </div>
             <div class="caixa titulo-caixa direita">
@@ -55,7 +55,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Foi o 1° distintivo utilizado na camisa do clube. As letras arcaicas “P” e “I”, nas cores brancas, estampavam o lado esquerdo do peito do uniforme verde do Palestra Italia. </p>
-                    <img src="../../img/escudo1915.png" alt="Escudo 1915">
+                    <img src="../../img/escudo/escudo1915.png" alt="Escudo 1915">
                 </div>
             </div>
             <div class="caixa titulo-caixa esquerda">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Para a disputa do Campeonato Paulista de 1916, a diretoria palestrina decidiu importar da Itália um jogo de camisa com o escudo da Cruz de Savoia, símbolo da Casa Real Italiana. </p>
-                    <img src="../../img/escudo1916.png" alt="Escudo 1916">
+                    <img src="../../img/escudo/escudo1916.png" alt="Escudo 1916">
                 </div>
             </div>
             <div class="caixa titulo-caixa direita">
@@ -79,7 +79,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">O contorno da Cruz de Savoia permaneceu, mas o desenho interno trouxe de volta as letras “P” e “I”, desta vez inseridas em um fundo verde. </p>
-                    <img src="../../img/escudo1917.png" alt="Escudo 1917">
+                    <img src="../../img/escudo/escudo1917.png" alt="Escudo 1917">
                 </div>
             </div>
             <div class="caixa titulo-caixa esquerda">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Em novo distintivo, o formato da Cruz de Savoia permaneceu, mas ganhou contorno na cor vermelha e preenchimento branco. No centro, as letras "P" e "I" entrecortando-se mudaram para a cor verde.</p>
-                    <img src="../../img/escudo1918.png" alt="Escudo 1918">
+                    <img src="../../img/escudo/escudo1918.png" alt="Escudo 1918">
                 </div>
             </div>
             <div class="caixa titulo-caixa direita">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">O formato do distintivo passou a ser circular, orlado de vermelho em um fundo branco. No centro, as letras "P" (na cor verde) e "I" (em vermelho) entrecortando-se.</p>
-                    <img src="../../img/escudo1919.png" alt="Escudo 1919">
+                    <img src="../../img/escudo/escudo1919.png" alt="Escudo 1919">
                 </div>
             </div>
             <div class="caixa titulo-caixa esquerda">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Com o mesmo formato circular, mudou-se apenas a disposição das cores – orlado de verde num fundo branco. No centro, as letras "P" e "I" passaram a aparecer ambas em vermelho.</p>
-                    <img src="../../img/escudo1928.png" alt="Escudo 1928">
+                    <img src="../../img/escudo/escudo1928.png" alt="Escudo 1928">
                 </div>
             </div>
             <div class="caixa titulo-caixa direita">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Com o mesmo formato circular, nova mudança na disposição das cores – desta vez, orlado de branco num fundo verde. No centro, as letras "P" e "I", ambas em vermelho, entrecortando-se.</p>
-                    <img src="../../img/escudo1937.png" alt="Escudo 1937">
+                    <img src="../../img/escudo/escudo1937.png" alt="Escudo 1937">
                 </div>
             </div>
             <div class="caixa titulo-caixa esquerda">
@@ -139,7 +139,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Símbolo provisório utilizado no período da mudança de nome. O centro da circunferência menor foi descolocado para baixo, com o contorno da Cruz de Savoia preenchido de verde com o “P” inserido em amarelo</p>
-                    <img src="../../img/escudo1942.png" alt="Escudo 1942">
+                    <img src="../../img/escudo/escudo1942.png" alt="Escudo 1942">
                 </div>
             </div>
             <div class="caixa titulo-caixa direita">
@@ -151,7 +151,7 @@
                 </div>
                 <div class="texto">
                     <p class="ptext">Na circunferência menor, foi recolocado o contorno da Cruz de Savoia, preenchido por 26 linhas alusivas ao dia de fundação do clube e em branco e as oito estrelas, que fazem referência ao mês de fundação do Palestra (26/08).  </p>
-                    <img src="../../img/escudo1959.png" alt="Escudo 1959">
+                    <img src="../../img/escudo/escudo1959.png" alt="Escudo 1959">
                 </div>
             </div>
         </div>
