Página de dados pessoais pronta

--- a/pj/site/client/index.html
+++ b/pj/site/client/index.html
@@ -49,19 +49,19 @@
     <div id="divCaixas">
         <div class="divQuiz">
             <p>Você realmente conhece o Palmeiras?</p>
-            <button>Clique Já</button>
+            <a href="pages/quiz/quiz.html" style="width: 100%;"><button>Clique Já</button></a>
             <p>Para realizar diversos quizzes sobre o assunto</p>
         </div> 
         <div class="divSobreMim">
             <p>Por que um site sobre o Palmeiras?</p>
-            <button>Clique Aqui...</button>
+            <a href="pages/qmSou/qmSou.html" style="width: 100%;"><button>Clique Aqui...</button></a>
             <p>E descubra mais sobre essa história de amor e ódio</p>
         </div>
     </div>
 
     <div class="divSubMenu">
         <div class="divTitulos">
-            <a href="">
+            <a href="pages/titulos/titulos.html">
                 <p>Títulos</p>
                 <img style="width: 70px;" src="img/trofeu.png" alt="">
             </a>
