--- a/pj/site/client/pages/qmSou/qmSou.html
+++ b/pj/site/client/pages/qmSou/qmSou.html
@@ -38,6 +38,47 @@
             <hr class="hr1">
             <hr class="hr2">
         </div>
+        <div class="divHorizontal">
+            <div class="divCaixa">
+                <label for="">&emsp;Quem sou eu?</label>
+                <div class="divTextos">
+                    <p>&emsp;&emsp;&emsp;Eu sou a Bárbara Barbato, tenho 17 anos e sou  aluna da SPTECH e estou cursando o  1° Ano de Ciência da Computação e fiz esse site para o meu projeto individual.</p>
+                    <p>&emsp;&emsp;&emsp;A proposta desse projeto era criar um site institucional usando o conteudo que aprendemos em aula, além disso a tématica dele deveria ser algo que fosse importante para nós, como uma música, um cantor, um time e entre outros.</p>
+                </div>
+            </div>
+            <div class="divImg">
+                <img src="../../img/babi.png" alt="">
+            </div>
+        </div>
+        <div class="divHorizontal" style="flex-direction: row-reverse;">
+            <div class="divCaixa">
+                <label for="">&emsp;Por que o Palmeiras?</label>
+                <div class="divTextos">
+                    <p>&emsp;&emsp;&emsp;A história de relação com o Palmeiras começou quando eu ainda era criança, meu pai é Palmeirense então ela falava um pouco comigo sobre o time, me dando até camisetas do clube.</p>
+                    <p>&emsp;&emsp;&emsp;Mas eu mesma comecei a me interessar depois de 2016, pois foi quando tive mais relação com o clube, me interessei bastante por futebol em um geral e comecei a práticar pela minha escola, consequentemente, me interessava cada vez mais pelo Palmeiras.</p>
+                </div>
+            </div>
+            <div class="divImg">
+                <img src="../../img/palmeirasclube2016.png" alt="">
+            </div>
+        </div>
+        <div class="divValores">
+            <h1>Valores</h1>
+            <div class="divImgValores">
+                <div style="text-align: center; color: white;">
+                    <img src="../../img/leadership (1).png" alt="">
+                    <h2>Liderança</h2>
+                </div>
+                <div style="text-align: center; color: white;">
+                    <img src="../../img/confrontation (1).png" alt="">
+                    <h2>Competitividade</h2>
+                </div>
+                <div style="text-align: center; color: white;">
+                    <img src="../../img/handshake.png" alt="">
+                    <h2>Comprometimento</h2>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
